# OpenSubdiv

./: .gitignore  CMakeLists.txt  NOTICE.txt  README.md  cmake_ios.sh  cmake_osx.sh  cmake_windows_x64.bat  cmake_windows_x86.bat
documentation/: CMakeLists.txt  additional_resources.rst  api_overview.rst  cmake_build.rst  code_examples.rst  diagrams.odg  dxptexviewer.rst  dxviewer.rst  examples_see_also.rst  far_overview.rst  getting_started.rst  glptexviewer.rst  glviewer.rst  nav_template.txt  osd_overview.rst  release_notes.rst  sdc_overview.rst  subdivision_surfaces.rst  tutorials.rst  using_osd.rst  using_osd_hbr.rst  using_osd_textures.rst  uvviewer.rst  vtr_overview.rst
documentation/css/: flavor.css
examples/: CMakeLists.txt
examples/common/: gl_framebuffer.h  gl_hud.h  hud.cpp  objAnim.h  patchColors.cpp  patchColors.h
examples/dxPtexViewer/: dxPtexViewer.cpp
examples/dxViewer/: dxviewer.cpp
examples/facePartition/: CMakeLists.txt  viewer.cpp
examples/glBatchViewer/: CMakeLists.txt  viewer.cpp
examples/glEvalLimit/: glEvalLimit.cpp
examples/glFVarViewer/: CMakeLists.txt  glFVarViewer.cpp
examples/glPaintTest/: glPaintTest.cpp
examples/glPtexViewer/: glPtexViewer.cpp
examples/glShareTopology/: glShareTopology.cpp
examples/glStencilViewer/: main.cpp
examples/glViewer/: CMakeLists.txt  glViewer.cpp  viewer.cpp
examples/limitEval/: CMakeLists.txt  main.cpp
examples/mayaPolySmooth/: mayaPolySmooth.cpp
examples/paintTest/: CMakeLists.txt  main.cpp
examples/ptexViewer/: CMakeLists.txt  viewer.cpp
examples/topologySharing/: CMakeLists.txt  viewer.cpp
examples/unity3d/: CMakeLists.txt  OpenSubdivUnity.cpp  TestOpenSubdivUnity.cpp
examples/unity3d/UnityProject/Assets/: OpenSubdiv.unity  OpenSubdivScript.cs
examples/unity3d/UnityProject/Assets/Editor/: BuildPackage.cs
examples/unity3d/UnityProject/Assets/OBJ-IO/Plugins/Extension/: MeshExtension.cs
examples/unity3d/UnityProject/Assets/OpenSubdiv/: OpenSubdiv.cs
examples/unity3d/UnityProject/Assets/Plugins/OpenSubdivUnity.bundle/Contents/: Info.plist
examples/unity3d/UnityProject/Assets/Plugins/OpenSubdivUnity.bundle/Contents/MacOS/: OpenSubdivUnity
examples/unity3d/UnityProject/ProjectSettings/: ProjectSettings.asset
examples/uvViewer/: CMakeLists.txt  viewer.cpp
examples/vtrViewer/: CMakeLists.txt  billboard.glsl  faceShader.glsl  fontShader.glsl  gl_fontutils.cpp  gl_fontutils.h  gl_mesh.cpp  gl_mesh.h  hbr_refine.cpp  hbr_refine.h  hbr_to_vtr.h  hbr_utils.h  init_shapes.h  shader.glsl  viewer.cpp  vtrViewer.cpp
opensubdiv/: CMakeLists.txt  README.txt  version.h
opensubdiv/far/: CMakeLists.txt  OVERVIEW.txt  kernelBatch.h  kernelBatchDispatcher.h  patchMap.h  patchTables.h  patchTablesFactory.cpp  patchTablesFactory.h  refineTables.cpp  refineTables.h  refineTablesFactory.cpp  refineTablesFactory.h  stencilTables.h  stencilTablesFactory.cpp  stencilTablesFactory.h  topologyRefiner.cpp  topologyRefiner.h  topologyRefinerFactory.cpp  topologyRefinerFactory.h  types.h
opensubdiv/osd/: CMakeLists.txt  clComputeContext.cpp  clComputeContext.h  clComputeController.cpp  clComputeController.h  clKernel.cl  cpuComputeContext.cpp  cpuComputeContext.h  cpuComputeController.cpp  cpuComputeController.h  cpuEvalLimitContext.cpp  cpuEvalLimitContext.h  cpuEvalLimitController.cpp  cpuEvalStencilsContext.cpp  cpuEvalStencilsContext.h  cpuEvalStencilsController.cpp  cpuKernel.cpp  cpuKernel.h  cpuSmoothNormalContext.cpp  cpuSmoothNormalContext.h  cpuSmoothNormalController.cpp  cudaComputeContext.cpp  cudaComputeContext.h  cudaComputeController.cpp  cudaComputeController.h  cudaKernel.cu  d3d11ComputeContext.cpp  d3d11ComputeContext.h  d3d11ComputeController.cpp  d3d11ComputeController.h  d3d11DrawContext.cpp  d3d11DrawContext.h  d3d11DrawRegistry.cpp  d3d11Mesh.h  d3d11PtexMipmapTexture.cpp  drawContext.cpp  drawContext.h  evalLimitContext.cpp  evalLimitContext.h  glDrawContext.cpp  (+29 more)
opensubdiv/osdutil/: uniformEvaluator.cpp  uniformEvaluator.h
opensubdiv/sdc/: CMakeLists.txt  OVERVIEW.txt  arrayInterface.h  bilinearScheme.cpp  bilinearScheme.h  bilinearTraits.cpp  catmarkScheme.cpp  catmarkScheme.h  catmarkTraits.cpp  crease.cpp  crease.h  edgeNeighborhood.h  faceNeighborhood.h  loopTraits.cpp  options.h  scheme.h  stencil.h  type.h  vertexNeighborhood.h
opensubdiv/sdc/examples/: vtrInterpolation.cc
opensubdiv/vtr/: CMakeLists.txt  OVERVIEW.txt  array.h  fvarLevel.cpp  fvarLevel.h  fvarRefinement.cpp  fvarRefinement.h  level.cpp  level.h  maskInterfaces.h  refinement.cpp  refinement.h  sparseSelector.cpp  sparseSelector.h  types.h
regression/: CMakeLists.txt
regression/common/: CMakeLists.txt  shape_utils.cpp  shape_utils.h  vtr_utils.cpp  vtr_utils.h
regression/osd_regression/: main.cpp
regression/vtr_regression/: CMakeLists.txt  init_shapes.h  main.cpp  vtr_regression.cpp
tutorials/: CMakeLists.txt
tutorials/far/: CMakeLists.txt  far_tutorial_0.cpp
tutorials/far/tutorial_0/: far_tutorial_0.cpp
tutorials/far/tutorial_1/: far_tutorial_1.cpp  hbr_to_vtr.h
tutorials/far/tutorial_2/: far_tutorial_2.cpp
tutorials/far/tutorial_3/: far_tutorial_3.cpp
tutorials/far/tutorial_4/: far_tutorial_4.cpp
tutorials/far/tutorial_5/: far_tutorial_5.cpp
tutorials/hbr/: CMakeLists.txt
tutorials/hbr/tutorial_0/: hbr_tutorial_0.cpp
tutorials/hbr/tutorial_1/: hbr_tutorial_1.cpp
tutorials/osd/: CMakeLists.txt
tutorials/osd/tutorial_0/: osd_tutorial_0.cpp
